--- a/src/css/shop/catalog.css
+++ b/src/css/shop/catalog.css
@@ -122,6 +122,20 @@
     border: 1px black solid;
 }
 
+.card-descr {
+    display: none;
+}
+
+.show-descr {
+    display: block;
+}
+
+.show-descr p {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .catalog-card .card-body button:hover {
     border: none;
     color: white;
