--- a/src/css/shop/filters.css
+++ b/src/css/shop/filters.css
@@ -1,8 +1,105 @@
-.filters button { 
-    font-size: 24px !important;
+.filters {
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    width: 98%;
+    align-self: center;
+    justify-content:center;
+
+    gap: 4rem;
 }
 
-.filters ul button {
+.filters h5 {
+    font-size: 20px;
+    margin: 0;
+}
+
+.filters h3 {
+    font-size: 24px;
+    margin: 0;
+}
+
+
+.filters button {
     background: transparent;
     border: none;
+}
+
+.drop-filter {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 16px;
+    border-radius: 10px;
+    align-self: center;
+    outline: 2px solid black;
+
+    width: fit-content;
+    height: fit-content;
+}
+
+.drop-filter:hover {
+    background-color: rgb(181, 145, 147);
+    color: white;
+    outline: none;
+}
+
+.dropdown-content {
+    display: none;
+    overflow: hidden;
+}
+
+.dropdown-content ul {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.filters ul {
+    list-style: none;
+    padding-inline-start: 0;
+    height: 100%;
+    margin: 0;
+
+    gap: 1em;
+}
+
+.filters ul li button {
+    display: block; 
+    width: 100%;
+    height: 55px;
+}
+
+.filters ul li button:hover {
+    background-color: rgb(181, 145, 147);
+    color: white;
+}
+
+.show {
+    display: flex;
+    flex-direction: row;
+
+    align-self: center;
+    justify-content:center;
+
+    align-items: center;
+    outline: 2px solid black;
+    border-radius: 10px;
+}
+
+@media (max-width: 720px) {
+    .filters {
+        flex-direction: column;
+    }
+
+    .dropdown-content {
+        flex-direction: column;
+    }
+
+    .dropdown-content ul {
+        flex-direction: column;
+    }
+  
 }
