--- a/src/css/services/auth.css
+++ b/src/css/services/auth.css
@@ -1,17 +1,20 @@
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-
-
-.my-form {
+.autorize {
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
+    backdrop-filter: blur(15px);
+    z-index: 50;
+
+    font-family: Roboto;
+}
+
+.header {
+    z-index: 100 !important;
 }
 
 .form-container {
@@ -22,7 +25,6 @@
     gap: 40px;
 
     width: 400px;
-    min-height: 400px;
     height: fit-content;
 
     border-radius: 1.5rem;
@@ -32,44 +34,25 @@
     padding-bottom: 30px;
 }
 
-.control-panel {
-    display: flex;
-    flex-flow: row wrap;
-    align-content: center;
-    align-items: center;
-    justify-content: space-between;
-
-    border-radius: 20px;
-    overflow: hidden;
-    background-color: white;
-    outline: 2px black solid;
-}
-
 .go-back {
-    font-size: 28px;
-    padding: 3.2px;
+    font-size: 32px;
+    padding: 5px 6px 3px 6px;
     color: black;
     text-decoration: none;
+    width: fit-content;
+
+    border-radius: 50%;
 }
 
-.log-in, .reg {
-    padding: 10px;
-    border: none;
-
-    background: transparent;
-    font-size: 20px;
-}
-
-.log-in:hover, .reg:hover, .go-back:hover {
+.go-back:hover {
     background-color: rgb(181, 145, 147);
     color: white;
 }
 
-.log-form {
+.serv-form {
     margin: 0;
     padding: 0;
     width: 300px;
-    min-height: 300px;
     height: fit-content;
 
     background-color: white;
@@ -78,7 +61,7 @@
 
 }
 
-.log-form form {
+.serv-form form {
     margin-bottom: 30px;
 }
 
@@ -91,15 +74,12 @@
     align-items: center;
 }
 
-.inputBox input::placeholder {
-    color: rgb(39, 38, 38);
-}
-
-.inputBox input {
+.inputBox .button {
     width: 100%;
     padding: 15px;
     border-radius: 35px;
     letter-spacing: 1px;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
 
@@ -109,53 +89,41 @@
     font-size: 16px;
 }
 
-.inputBox input[type="button"] {
+.inputBox .button {
     background-color: white;
     color: black;
     max-width: 130px;
     cursor: pointer;
     margin-bottom: 20px;
     font-weight: 600;
+    text-decoration: none;
 }
 
-.inputBox input[type="button"]:hover {
+.inputBox .button:hover {
     background-color: rgb(181, 145, 147);
     color: white;
     outline: none;
 }
 
-.form-text {
-    color: black;
-    text-align: center;
-}
-
-.form-text a {
-    color: black;  
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-.form-text a:hover {
-    color: rgb(181, 145, 147);
-}
 
 .hidden {
     display: none;
 }
 
-.wide {
-    max-width: fit-content !important;
-}
 
 .message {
+    text-align: center;
     font-weight: bold;
-    font-size: 14px;
-    margin-top: 10px;
+    font-size: 24px;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 @media (max-width: 440px) {
     .form-container {
         width: 300px;
+        padding-top: 0;
     }
 
     .control-panel {
@@ -168,11 +136,8 @@
         font-size: 16px;
     }
 
-    .log-in, .reg {
-        padding: 12px;
-    }
-
-    .log-form {
+    
+    .serv-form {
         width: 280px;
     }
 }
@@ -192,11 +157,7 @@
         font-size: 12px;
     }
 
-    .log-in, .reg {
-        padding: 13.2px;
-    }
-
-    .log-form {
+    .serv-form {
         width: 220px;
     }
 }
