--- a/src/css/services/services-style.css
+++ b/src/css/services/services-style.css
@@ -1,6 +1,8 @@
 @import url(/src/css/header.css);
 @import url(/src/css/footer.css);
 @import url(navigation-panel.css);
+@import url(services-list.css);
+@import url(auth.css);
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Roboto:wght@400;500;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat&family=Roboto:wght@400;500;900&display=swap');
 
