--- a/src/css/services/services-list.css
+++ b/src/css/services/services-list.css
@@ -178,6 +178,12 @@
     color: rgb(181, 145, 147);
 }
 
+@media  (max-width: 900px) {
+    .service-element {
+        padding: 20px 0px 20px 0px;
+    }
+}
+
 @media  (max-width: 700px) {
     .service, .price {
         font-size: 16px;
