--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,8 +4,11 @@ footer {
     padding: 30px 50px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
     gap: 2rem 4rem;
-    grid-template-areas: "about nav shop contact";
+    grid-template-areas:
+        "about nav shop contact"
+        "copyright copyright copyright copyright";
     margin-top: 50px;
 
     z-index: 50;
@@ -72,15 +75,32 @@ footer h3:after {
 .navigation{
     grid-area: nav;
 }
+.copyright {
+    grid-area: copyright;
+}
+
+.copyright {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.copyright h4 {
+    font-size: 12px;
+    text-align: center;
+}
 
 @media screen and (min-width: 769px) and (max-width: 1000px) {
     .footer {
-        bottom: -200rem;
         font-size: 18px;
         grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
         grid-template-areas: 
         "about nav"
-        "shop contact";
+        "shop contact"
+        "copyright copyright";
     }
 }
 
@@ -88,11 +108,13 @@ footer h3:after {
     .footer {
         font-size: 16px;
         grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
         grid-template-areas: 
         "about"
         "nav"
         "shop"
-        "contact";
+        "contact"
+        "copyright";
     }
 }
 
